Bug 156140 - A11y warnings when using default heading/title styles
Summary: A11y warnings when using default heading/title styles
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: accessibility
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-07-03 11:57 UTC by Samuel Mehrbrodt
Modified: 2023-07-24 13:34 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (12.20 KB, application/vnd.oasis.opendocument.text)
2023-07-03 11:57 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2023-07-03 11:57:51 UTC
Created attachment 188180 [details]
bugdoc

1. Open bugdoc
2. Go to a11y check deck

The bugdoc only has the default title/heading styles applied, no direct formatting or anything like that.

There should be no such warnings when using the default title/heading styles.
Comment 1 Commit Notification 2023-07-21 14:04:09 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aba88061e5091e932418b5b03c7d189a28a8256d

tdf#156140 - A11y fix warnings when using default heading/title styles

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-07-24 13:34:08 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/68708b763391c3f9a80dc1fd26aec828211c7c79

tdf#156140 - A11y fix warnings when using default heading/title styles

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.