tdf#156140 - A11y fix warnings when using default heading/title styles

No warnings when we use default paragraph styles.

Change-Id: Idbbd542a33c23ff38f691098bf0ceba610efad84
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154673
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit aba88061e5091e932418b5b03c7d189a28a8256d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154702
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>